--- a/.github/workflows/run-long-tests.yml
+++ b/.github/workflows/run-long-tests.yml
@@ -64,7 +64,7 @@ jobs:
   prepare_test_data:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
 
     runs-on: ${{ matrix.os }}
 
@@ -102,7 +102,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
+        os: [ ubuntu-latest ]
         test: ${{ fromJSON(needs.setup.outputs.matrix-tests) }}
         chunk: ${{ fromJSON(needs.setup.outputs.matrix-chunks) }}
 
@@ -199,14 +199,7 @@ jobs:
             --no-daemon
             -PtestReportMergePrefix=ksmt-test-report-ubuntu-latest
 
-      - name: Merge test report [windows-latest]
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: |
-            :ksmt-test:mergeTestReports
-            --no-daemon
-            -PtestReportMergePrefix=ksmt-test-report-windows-latest
-            
+      
       - name: Upload merged test reports
         uses: actions/upload-artifact@v3
         with:
