--- a/.github/workflows/run-benchmarks.yml
+++ b/.github/workflows/run-benchmarks.yml
@@ -2,12 +2,65 @@ name: Build and run benchmark tests
 
 on:
   workflow_dispatch:
-
-
+    inputs:
+      tests:
+        description: >
+          Comma separated list of tests to run from ksmt-test module. 
+          For example: Z3BenchmarksBasedTest.testConverter, Z3BenchmarksBasedTest.testSolver
+        required: true
+        type: string
+        default: SymfpuZ3, SymfpuYices, SymfpuBitwuzla, Z3, Bitwuzla
+      chunkSize:
+        description: Maximal size of a single test data chunk
+        required: true
+        type: number
+        default: 1000
+      testDataSize:
+        description: Size of test dataset
+        required: true
+        type: number
+        default: 68907
 env:
   TEST_DATA_REVISION: 0.2.1
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix-tests: ${{ steps.set-tests.outputs.tests }}
+      matrix-chunks: ${{ steps.set-chunks.outputs.chunks }}
+    steps:
+      - id: set-chunks
+        name: Calculate chunk indices based on size of the dataset
+        run: |
+          LIMIT="${{ inputs.testDataSize }}"
+          SIZE="${{ inputs.chunkSize }}"
+          CHUNKS_AMOUNT=$((LIMIT / SIZE - 1))
+          CHUNKS="[0"
+          for (( i=1; i<=$CHUNKS_AMOUNT; i+=1 )); do
+            CHUNKS+=",$i";
+          done
+          CHUNKS+="]"
+          echo "chunks=$CHUNKS" >> $GITHUB_OUTPUT
+      - id: set-tests
+        name: >
+          Convert comma separated list to JSON array: 'a, b' -> '["a","b"]'
+        run: |
+          STR="${{ inputs.tests }}"
+          IFS=',' read -r -a array <<< "$STR"
+          ARRAY_SIZE="${#array[@]}"
+          TEST_ARRAY="["
+          if test $ARRAY_SIZE -gt 0; then
+            TRIM="$(echo -e "${array[0]}" | tr -d '[:space:]')"
+            TEST_ARRAY+="\"$TRIM\""
+            for (( i=1; i<$ARRAY_SIZE; i+=1 )); do
+              TRIM="$(echo -e "${array[i]}" | tr -d '[:space:]')"
+              TEST_ARRAY+=",\"$TRIM\""
+            done
+          fi
+          TEST_ARRAY+="]"
+          echo "tests=$TEST_ARRAY" >> $GITHUB_OUTPUT
+
   prepare_test_data:
 
     runs-on: ubuntu-latest
@@ -42,16 +95,16 @@ jobs:
             -PtestDataRevision=${{ env.TEST_DATA_REVISION }}
 
   run_tests:
-    needs: [ prepare_test_data ]
+    needs: [ setup, prepare_test_data ]
     continue-on-error: true
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        test: [ SymFPUBenchmarksBasedTest.testQF_ABVFP, SymFPUBenchmarksBasedTest.testQF_BVFP, SymFPUBenchmarksBasedTest.testQF_FP ]
+        solver: ${{ fromJSON(needs.setup.outputs.matrix-tests) }}
+        chunk: ${{ fromJSON(needs.setup.outputs.matrix-chunks) }}
+    name: Run ${{ matrix.solver }}[${{ matrix.chunk }}]
 
-    name: Run ${{ matrix.test }} on ${{ matrix.os }}
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -87,28 +140,23 @@ jobs:
             --no-daemon
             -PtestDataRevision=${{ env.TEST_DATA_REVISION }}
 
-      - name: Build project
-        uses: gradle/gradle-build-action@v2
-        if: always()
-        with:
-          arguments: |
-            build
-            --no-daemon
-
       - name: Run ${{ matrix.test }}
         uses: gradle/gradle-build-action@v2
         with:
           arguments: |
-            :ksmt-test:test --tests  ${{ format('"org.ksmt.test.benchmarks.{0}"', matrix.test) }}
+            :ksmt-test:test --tests "org.ksmt.test.benchmarks.SymFPUBenchmarksBasedTest.testSolver" 
             --no-daemon
             --continue
             -PrunBenchmarksBasedTests=true
+            -Psolver=${{ matrix.test) }}
 
       - name: Upload ksmt test reports
         uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: ${{ format('bench-{0}', matrix.test) }}
+          name: ${{ format('bench-{0}-{1}', matrix.test, matrix.chunk) }}
           path: ksmt-test/data.csv
 
+
+description: runs symfpu benchmarks
 
