--- a/.github/workflows/run-benchmarks.yml
+++ b/.github/workflows/run-benchmarks.yml
@@ -148,7 +148,7 @@ jobs:
             --no-daemon
             --continue
             -PrunBenchmarksBasedTests=true
-            -Psolver=${{ matrix.test }}
+            -PbenchmarkSolver=${{ matrix.test }}
 
       - name: Upload ksmt test reports
         uses: actions/upload-artifact@v3
@@ -156,6 +156,39 @@ jobs:
         with:
           name: ${{ format('bench-{0}-{1}', matrix.test, matrix.chunk) }}
           path: ksmt-test/data.csv
+
+  merge_test_report:
+    name: Merge chunked test reports into a single one
+
+    needs: [ run_tests ]
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          path: reports
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v3
+        with:
+          java-version: 8
+          distribution: 'zulu'
+
+      - name: Merge test report [ubuntu-latest]
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: |
+            :ksmt-test:mergeCSVFiles
+            --no-daemon
+
+      - name: Upload merged test reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: reports/merged.csv
+          path: report.csv
 
 
 
