--- a/.github/workflows/build-and-run-tests.yml
+++ b/.github/workflows/build-and-run-tests.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - rem-wip
 
   pull_request:
     types: [ opened, edited ]
@@ -29,25 +30,16 @@ jobs:
           distribution: 'zulu'
           cache: gradle
 
-      - name: Build and run z3 tests on macOS
+      - name: Build and run symfpu tests on macOS
         uses: gradle/gradle-build-action@v2
-        if: runner.os == 'macOS'
+        if: always()
         with:
           arguments: |
-            :ksmt-z3:build
+            :ksmt-symfpu:build
              --no-daemon
              --continue
              -PrunBenchmarksBasedTests=false
-
-      - name: Build and run simple tests on Linux or Windows
-        uses: gradle/gradle-build-action@v2
-        if: runner.os != 'macOS'
-        with:
-          arguments: |
-            build
-             --no-daemon
-             --continue
-             -PrunBenchmarksBasedTests=false
+ 
 
       - name: Upload ksmt test reports
         uses: actions/upload-artifact@v3
